fixing white space gap for large monitors

--- a/src/components/Home.css
+++ b/src/components/Home.css
@@ -8,6 +8,7 @@
     flex-direction: column;
     align-items: center;
     display: flex;
+    min-height: 100vh;
 }
 
 .home-image {
@@ -59,6 +60,7 @@
 .skills-and-experience{
     background: linear-gradient(to bottom, white, #b78a80);
     width: 100%;
+    flex: 1;
 }
 
 .detail {
